2005-01-12  Sushma Rai  <rsushma@novell.com>

	* exchange-ask-password.c: (validate_exchange_user):
	Added one more error condition check.

2005-01-12  Sushma Rai  <rsushma@novell.com>

	* org-gnome-exchange-account-setup.eplug.in: Factory
	method to add owa url entry to account editor. 

	* exchange-ask-password.c: (org_gnome_exchange_set_url)
	(add_owa_entry_to_editor): Adds owa url entry to the 
	account editor for Exchange account.
	(validate_exchange_user): Using the CamelProvider private
	function defined by Exchange camel provider.
 
2005-01-11  Sushma Rai  <rsushma@novell.com>

	* org-gnome-exchange-account-setup.eplug.in: Removed page check plugin

	* exchange-ask-password.c: Added a button to prompt for password
	instead of listening on page next signal

2005-01-11  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: fix LDFLAGS variable name.

2005-01-10  Sushma Rai <rsushma@novell.com>

	* exchange-ask-password.c: (validate_exchange_user):
	Corrected argument order.

2005-01-10  Sushma Rai <rsushma@novell.com>
	
	* org-gnome-exchange-account-setup.eplug.in: Added plugin to read
	OWA url entry to the account set up druid.

	* exchange-ask-password.c: Create a entry for OWA URL and reads the
	URL value.

2005-01-09  Sushma Rai <rsushma@novell.com>
	
	* exchange-ask-password.c: Pops up password dialog and validates
	user credentials once owa url and user name are entered.

	* org-gnome-exchange-account-setup.eplug.in: Added page check plugin.

2005-01-09  Sushma Rai <rsushma@novell.com>

	* Intial ckeckin, Plugin for Exchange account specific settings